# OSS-APIs

./: .gitignore  main.py  pyproject.toml
src/ai_api/: main.py  pyproject.toml
src/ai_api/src/ai_api/: __init__.py
src/chat_api/: pyproject.toml
src/chat_api/src/chat_api/: __init__.py
src/tickets_api/: main.py
src/tickets_api/src/tickets_api/: __init__.py
